<resources>
    <string name="app_name">SavePass</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password_field">Password</string>
    <string name="enter_main_password">Enter your password:</string>
    <string name="log_in">LOG IN</string>
    <string name="wrong_main_password_dialog_header">Warning!</string>
    <string name="wrong_main_password_dialog_message">You entered the wrong password.</string>
    <string name="wrong_main_password_dialog_ok">OK</string>
    <string name="preference_local_password">pref_local_pass</string>
    <string name="password_retype_field">Retype password</string>
    <string name="main_password_not_same_dialog_header">Warning</string>
    <string name="main_password_not_same_dialog_message">Passwords are not the same. Please correct them.</string>
    <string name="main_password_not_same_dialog_ok">OK</string>
    <string name="register">register</string>
    <string name="cancel_adding_pass">Cancel adding new password info.</string>
    <string name="add_new_pass">Add new password info</string>
    <string name="page_name">Name of the page</string>
    <string name="password">Password</string>
    <string name="web_address">Web address</string>
    <string name="user_name">User name</string>
    <string name="short_desc">Short description</string>
    <string name="notes">Notes</string>
    <string name="change_pass_after">Remind to change password after</string>
    <string name="days">days.</string>
    <string name="days_hint">days</string>
    <string name="sync_pass_server">Sync password with server</string>
    <string name="generate_password">Generate password</string>
    <string name="include_symbols">Include basic symbols</string>
    <string name="include_uppercase_characters">Include uppercase characters</string>
    <string name="include_lowercase_characters">Include lowercase characters</string>
    <string name="include_numbers">Include numbers</string>
    <string name="password_length">Password length</string>
    <string name="icon_of_the_password">Icon of the password</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">NO</string>
    <string name="dialog_want_empty_pass">Do you want have empty password field?</string>
    <string name="dialog_ok">OK</string>
    <string name="empty_reminder">You have left empty field with number of days after app will remind you about refresh the password.</string>
    <string name="too_many_days_in_reminder">You have typed too many days to remind you about refresh the password. Max is 365. Type 0 if you want to disable this function.</string>
    <string name="unknow_reminder_field_error">There is unknow error with the field with days for the reminder about password refresh. Please change something there.</string>
    <string name="unknow_error_with_password">Oh no! Unknow error occured when app tried to save password to the database. This should not happen!</string>
    <string name="dialog_error_empty_name">You can not have empty name field.</string>
    <string name="dialog_want_empty_address">Do you want have empty web address  field?</string>
    <string name="pass_view_note">Note</string>
    <string name="pass_view_short_desc">Short description</string>
    <string name="pass_view_pass">Password:</string>
    <string name="pass_view_login">Login:</string>
    <string name="pass_view_imgdesc_copy_login">Copy login</string>
    <string name="pass_view_imgdesc_copy_pass">Copy password</string>
    <string name="login">Login</string>
    <string name="pass">Password</string>
    <string name="copied_successfully">Copied successfully.</string>
    <string name="error_while_copying">An unknown error occurred while copying.</string>
    <string name="edit_pass_info">Edit password information</string>
    <string name="cancel_adding_new_password">Cancel adding new password</string>
    <string name="add_new_password">Add new password</string>
    <string name="delete_password_forever">Delete the password forever</string>
    <string name="save_password_changes">Save changes in the password</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>3 hours</item>
        <item>6 hours</item>
        <item>12 hours</item>
        <item>1 day</item>
        <item>3 days</item>
        <item>7 days</item>
        <item>14 days</item>
        <item>28 days</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>3</item>
        <item>6</item>
        <item>12</item>
        <item>24</item>
        <item>72</item>
        <item>168</item>
        <item>336</item>
        <item>672</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="settings">Settings</string>
</resources>
