<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2018. by Sebastian Witasik
  ~ All rights reserved. No part of this application may be reproduced or be part of other software, without the prior written permission of the publisher. For permission requests, write to the author(WitasikSebastian@gmail.com).
  -->

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/login_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pass_view_login"
                android:textColor="@android:color/darker_gray"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">


                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:textColorHint="@android:color/white"
                    app:hintAnimationEnabled="false"
                    app:hintEnabled="false">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/login_field"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textNoSuggestions"
                        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                        android:textColor="@android:color/white"
                        android:focusable="false"
                        android:cursorVisible="false"
                        android:background="@android:color/transparent"
                        tools:text="Cool login"/>

                </android.support.design.widget.TextInputLayout>

                <ImageButton
                    android:id="@+id/copy_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    app:srcCompat="@drawable/ic_copy"
                    android:contentDescription="@string/pass_view_imgdesc_copy_login"/>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pass_view_pass"
                android:textColor="@android:color/darker_gray"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">


                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:textColorHint="@android:color/white"
                    app:hintAnimationEnabled="false"
                    app:hintEnabled="false"
                    app:passwordToggleDrawable="@drawable/pass_visibility_selector"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@android:color/white">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/password_field"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:textColor="@android:color/white"
                        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                        android:focusable="false"
                        android:cursorVisible="false"
                        android:background="@android:color/transparent"
                        tools:text="Super text"/>

                </android.support.design.widget.TextInputLayout>

                <ImageButton
                    android:id="@+id/copy_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    app:srcCompat="@drawable/ic_copy"
                    android:contentDescription="@string/pass_view_imgdesc_copy_pass"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/short_desc_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/pass_view_short_desc"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>

            <TextView
                android:id="@+id/short_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                tools:text="TextView"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/note_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/pass_view_note"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>

            <TextView
                android:id="@+id/note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                tools:text="TextView"/>

        </LinearLayout>

    </LinearLayout>
</ScrollView>